Adding an image and displaying a Shiny image

--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Pokemon</title>
-  <link rel="icon" href="image/png/favicon.png" type="image/png">
+  <title>Pokédex</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
-    <input type="text" placeholder="Pesquisar..." id="searchInput">
+    <input
+      type="text"
+      id="searchInput"
+      placeholder="Digite o nome ou ID do Pokémon"
+    >
     <button id="searchButton">Buscar</button>
   </header>
 
-  <main id="content">
-  </main>
+  <main id="content"></main>
 
   <script src="script.js"></script>
 </body>
